🔧 refactor(package.json): update package details for better project identification ✨ feat(MainPane.tsx): add conditional rendering based on connection status for better UX 🐛 fix(Address.tsx): change isMobile to isTablet for better address display on different devices 🔧 refactor(TransferNative.tsx): remove unnecessary useBalance hook and adjust NumberInput properties ✨ feat(useTransferNative.ts): add notifications for transaction status updates 💄 style(mainPane.module.css): increase padding for better layout and readability

--- a/src/styles/mainPane.module.css
+++ b/src/styles/mainPane.module.css
@@ -4,7 +4,7 @@
   text-align: center;
   margin: auto;
   margin-top: 1rem;
-  padding: 20px 0;
+  padding: 30px 0;
   border-radius: 10px;
   box-shadow: 0px 0px 30px 30px rgba(30, 136, 229, 0.2);
 }
